--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>MyApp</title>
-  <base href="/">
-
-  <link rel="stylesheet" type="text/css" href="https://italia.github.io/design-web-toolkit/build/build.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8">
+    <title>Clarity Seed App</title>
+    <base href="/">
+    <link rel="stylesheet" type="text/css" href="https://italia.github.io/design-web-toolkit/build/build.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
+    <link rel="stylesheet" href="../node_modules/clarity-icons/clarity-icons.min.css">
+    <link rel="stylesheet" href="../node_modules/clarity-ui/clarity-ui.min.css">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
-  <!-- <script src="https://italia.github.io/design-web-toolkit/build/styleguide.min.js?cachebust=1.1.0"></script> -->
+
+<script src="../node_modules/@webcomponents/custom-elements/custom-elements.min.js"></script>
+<script src="../node_modules/clarity-icons/clarity-icons.min.js"></script>
+
 </html>
